src/test/deca/context/invalid/object/redefinitionOtherSig.deca
class X
{
  int a;
}
class A
{
  X a(int a, float b){}
}

class B extends A
{
  X a(int a, int c){}
}
